syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.github.godcong.proto";
option java_outer_classname = "NodeServiceProto";

package proto;

service NodeService {
    rpc RemoteDownload (RemoteDownloadRequest) returns (NodeReply) {
    }
    rpc Status (StatusRequest) returns (NodeReply) {
    }
}

message StatusRequest {
    string id = 1;
}

enum NodeRemoteType {
    Basic = 0;
    Retry = 1;
    Force = 2;
}


enum NodeBackType {
    HTTP = 0;
    GRPC = 1;
}

message RemoteDownloadRequest {
    string ID = 1;
    string objectKey = 2;
    string keyURL = 3;
    //NodeRemoteType remoteType = 2 ;
    //NodeBackType backType = 3 ;
    //string backHost = 4;
}

message NodeReply {
    int32 code = 1;
    string message = 2;
    NodeReplyDetail detail = 3;
}

message NodeReplyDetail {
    string ID = 1;
    string json = 2;
}
